libusb.NET/Native/Functions.cs


		// int libusb_bulk_transfer(struct libusb_device_handle *dev_handle, unsigned char endpoint, unsigned char *data, int length, int *transferred, unsigned int timeout);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_bulk_transfer(libusb_device_handle dev_handle, byte endpoint, ref byte[] data, int length, out int transferred, uint timeout);
		public  static        int libusb_bulk_transfer(libusb_device_handle dev_handle, byte endpoint, ref byte[] data, out int transferred, int timeout)
		{
			return (libusb_bulk_transfer(dev_handle, endpoint, ref data, (data != null ? data.Length : 0), out transferred, Convert.ToUInt32(timeout)));
		}

		// int libusb_interrupt_transfer(struct libusb_device_handle *dev_handle, unsigned char endpoint, unsigned char *data, int length, int *transferred, unsigned int timeout);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_interrupt_transfer(libusb_device_handle dev_handle, byte endpoint, ref byte[] data, int length, out int transferred, uint timeout);
		public  static        int libusb_interrupt_transfer(libusb_device_handle dev_handle, byte endpoint, ref byte[] data, out int transferred, int timeout)
		{
			return (libusb_interrupt_transfer(dev_handle, endpoint, ref data, (data != null ? data.Length : 0), out transferred, Convert.ToUInt32(timeout)));
		}

		#endregion

		#endregion
	}
}

//==================================================================================================
// End of
// $URL$
//==================================================================================================
